Project meta_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Meta Bank Database
  '''
}
Table users as U {
  username varchar [pk]
  password varchar [not null]
  email varchar [unique,not null]
  full_name varchar [not null]
  role varchar [default: 'depositor']
  is_verified_email bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01']
  created_at timestamptz [not null, default: `now()`]
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  currency varchar [not null]
  balance bigint [not null]
  created_at timestamptz [not null, default: `now()`]

Indexes {
  owner
  (owner,currency) [unique]
}

}

Table entries as E {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [not null, default: `now()`]


  Indexes {
    account_id
  }
}

Table transfers as T {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']

  indexes {
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
}

Table sessions as S {
  id bigint [pk]
  username varchar [ref: > U.username,not null]
  refresh_toekn varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null,default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table verified_email {
id bigint [pk]
username varchar [ref: > U.username,not null]
email varchar [not null]
secret_code varchar [not null]
is_used bool [not null,default: false]
created_at timestamptz [not null, default: `now()`]
expires_at timestamptz [not null,default: `now() + interval '15 minutes''`]
}